fix: right grid area and align all grid items

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ main {
 	left: 300px;
 	padding: 40px 32px;
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: auto 1fr auto;
 	grid-auto-rows: auto;
 	gap: 32px 20px;
 }
@@ -215,7 +215,7 @@ h3 {
 } */
 
 .stats {
-	grid-column: 1/4;
+	grid-column: 1/3;
 	padding: 20px;
 	height: 417px;
 }
@@ -237,7 +237,11 @@ h3 {
 }
 
 .experts {
-	grid-column: 3/5;
+	grid-column: 2/4;
+}
+
+.aside {
+	box-sizing: border-box;
 }
 
 .experts__wrapper {
@@ -282,5 +286,5 @@ h3 {
 }
 
 .latest {
-	grid-column: 1/3;
+	grid-column: 1/2;
 }
